Correction de Algo ENI

--- a/_ALGORITHM/Algorithmique - Techniques fondamentales de programmation [Jonifar Lina - ENI]/01. Les fondements de l’informatique.md
+++ b/_ALGORITHM/Algorithmique - Techniques fondamentales de programmation [Jonifar Lina - ENI]/01. Les fondements de l’informatique.md
@@ -1,6 +1,6 @@
 # Les fondements de l'informatique
 
-### Architecture de Von Neumann
+## Architecture de Von Neumann
 
 - Un ordinateur permet de **manipuler des informations** qu’on appelle des données
 - Il est capable d'**executer des instructions** pour obtenir des résultats
@@ -24,14 +24,14 @@ L’architecture de **Von Neumann** décompose l’ordinateur en quatre parties 
 4. ##### Les Entrées/Sorties (E/S)
    - permettent de **communiquer** avec le monde extérieur _et donc nous_ (clavier, écran, ...)
 
-##### Déroulement d'un programme
+### Déroulement d'un programme
 
 1. Les **instructions** du programme sont présentes **dans la mémoire**
 2. L'**UC** va prendre la première **instruction** du programme et **l’exécuter**
    - déclenche l’opération adéquate **sur UAL ou l’E/S** (selon l'instruction)
 3. Range le **résultat** dans la **mémoire** (si nécessaire)
 
-##### Le microprocesseur
+### Le microprocesseur
 
 Le microprocesseur contient:
 
@@ -47,26 +47,26 @@ Le microprocesseur contient:
 
 Le microprocesseur dispose d’un **ensemble d’instructions** prédéfini.
 
-##### Les contrôleurs
+### Les contrôleurs
 
 Ces **puces électroniques** (chipsets) sont aussi des sortes de microprocesseurs
 Les contrôleurs ont le rôle de gérer un **certain type de périphérique**
 
-### Représentation interne des instructions et des données
+## Représentation interne des instructions et des données
 
-##### Le binaire
+### Le binaire
 
 un ordinateur ne manipule que deux valeurs : **0 ou 1**
 un nombre binaire correspondra soit à une **donné**. soit à une **instruction**
 
-##### Les octets et les mots
+### Les octets et les mots
 
 - Un ordinateur manipule individuellement chaque bit d’une valeur
 - Mais les bits sont **stockés** par multiples de huit appelé un **octet**
 - Un octet représente les valeurs de **0 à 255**
 - Les **instructions** et les **données** sont codées en nombres binaires qu’on appelle des **mots**
 
-##### L’hexadécimal
+### L’hexadécimal
 
 | Décimal | 0   | 1   | 2   | 3   | 4   | 5   | 6   | 7   | 8    | 9    | 10   | 11   | 12   | 13   | 14   | 15   |
 | ------- | --- | --- | --- | --- | --- | --- | --- | --- | ---- | ---- | ---- | ---- | ---- | ---- | ---- | ---- |
