--- a/_ALGORITHM/Algorithmique - Techniques fondamentales de programmation [Jonifar Lina - ENI]/02. L'algorithmique.md
+++ b/_ALGORITHM/Algorithmique - Techniques fondamentales de programmation [Jonifar Lina - ENI]/02. L'algorithmique.md
@@ -1,22 +1,22 @@
 # L'algorithmique
 
-### Définition
+## Définition
 
 Un algorithme c’est une **suite d’instructions** qui aboutissent au **résultat** attendu
 
-### Pourquoi utiliser un algorithme ?
+## Pourquoi utiliser un algorithme ?
 
 Un algorithme décrit une **méthode de résolution** de problèmes courants
 Apprendre l’algorithmique c’est apprendre à programmer dans les règles de l’art
 
-### Le formalisme
+## Le formalisme
 
 Un algorithme doit être clair et lisible, on utilise deux moyens:
 
 - soit d’écrire l’algorithme sous forme de texte simple et évident
 - soit de faire un schéma explicatif avec des symboles
 
-##### La représentation graphique
+### L’algorithme sous forme graphique
 
 Les algorithmes peuvent être construits à l’aide de symboles d’**organigrammes**:
 
@@ -34,7 +34,7 @@ flowchart LR
     id4[Afficher Bravo]
 ```
 
-##### L’algorithme sous forme de texte
+### L’algorithme sous forme de texte
 
 ```pascal
 VAR
@@ -42,8 +42,8 @@ VAR
  valeur: entier
 
 BEGIN
- de := aléatoire(6)
- valeur := 9
+ de <- aléatoire(6)
+ valeur <- 9
  while valeur <> dé do
     Saisir valeur
  end
@@ -51,7 +51,7 @@ BEGIN
 END
 ```
 
-### La complexité
+## La complexité
 
 - Plus un algorithme est **complexe**, plus il est **coûteux** et moins il est efficace.
 - L’utilité de connaître la complexité des algorithmes et **d’optimiser** ceux­-ci
