--- a/_ALGORITHM/Algorithmique - Techniques fondamentales de programmation [Jonifar Lina - ENI]/03. Les langages d'implementation.md
+++ b/_ALGORITHM/Algorithmique - Techniques fondamentales de programmation [Jonifar Lina - ENI]/03. Les langages d'implementation.md
@@ -1,8 +1,8 @@
 # Les langages d’implémentation
 
-### Classifications des langages
+## Classifications des langages
 
-##### Haut niveau, bas niveau
+### Haut niveau, bas niveau
 
 - ###### Langage de bas niveau
 
@@ -15,7 +15,7 @@
   - permet de faire une abstraction du fonctionnement interne de votre ordinateur
   - Parmi les langages de très haut niveau se trouvent **Java**, **C#**, le **PHP**
 
-##### Diverses classifications
+### Diverses classifications
 
 Il existe d’**autres classifications** dont voici un bref échantillon :
 
@@ -24,7 +24,7 @@ Il existe d’**autres classifications** dont voici un bref échantillon :
 - typé ou non typé
 - interprété ou compilé
 
-##### Compilé ou interprété
+### Compilé ou interprété
 
 - ###### Langage compilé
   - Le programme source est convertit en langage machine par un **compilateur**
@@ -33,7 +33,7 @@ Il existe d’**autres classifications** dont voici un bref échantillon :
 
 Un programme interprété sera plus lent à cause de la **conversion dynamique** du programme
 
-##### La machine virtuelle
+### La machine virtuelle
 
 Il existe une étape intermédiaire entre l’interprété et le compilé: la **machine virtuelle**
 Le programme source est compilé dans un language intermediaire que l'on nomme **bytecode**
