--- a/_ALGORITHM/Algorithmique - Techniques fondamentales de programmation [Jonifar Lina - ENI]/04. La variable.md
+++ b/_ALGORITHM/Algorithmique - Techniques fondamentales de programmation [Jonifar Lina - ENI]/04. La variable.md
@@ -1,6 +1,6 @@
 # La variable
 
-### Principe
+## Principe
 
 - Une variable est un **nom** donné à une valeur
 - Cette valeur **peut varier** au cours du temps
@@ -8,7 +8,7 @@
 > Chaque case mémoire est référencée par **une adresse** (exprimée par une valeur binaire)
 > Le compilateur fera la conversion des noms vers les adresses des cases mémoire
 
-### Déclaration
+## Déclaration des variables
 
 Les variables se **déclarent** au début de l’algorithme après le mot `VAR`
 On doit indiquer **son nom** et **type de valeur qu’elle peut contenir**
@@ -20,11 +20,11 @@ VAR
     // ...
 ```
 
-### Les types
+## Les types de variable
 
 La variable est **encodée** dans la mémoire selon le **type** et la **taille** de la valeur
 
-##### Les nombres
+### Les nombres
 
 Deux types numériques sont utilisés en algorithmique :
 
@@ -38,7 +38,7 @@ VAR
     qte: entier
 ```
 
-##### Les caractères
+### Les caractères
 
 - Pour représenter un seul caractère, on utilise le type `caractère`
 - Pour une chaîne, on utilise le type `chaîne`
@@ -49,11 +49,11 @@ VAR
     car: caractère
 ```
 
-##### Le type booléen
+### Le type booléen
 
-### Affectation
+## Affectation
 
-En pseudo-code, on utilise le symbole **`<-` pour affecter une valeur** à une variable (`:=` en Pascal)
+En pseudo-code, on utilise le symbole **`<-` pour affecter une valeur** à une variable (`<-` en Pascal)
 
 ```pascal
 PROGRAM AFFECTATION;
@@ -65,29 +65,29 @@ VAR
   vrai: booléen;
 
 BEGIN
-  a := 10;
-  b := 3.1415927;
-  c := 12345;
-  titre := 'ma première affectation';
-  vrai := True;
+  a <- 10;
+  b <- 3.1415927;
+  c <- 12345;
+  titre <- 'ma première affectation';
+  vrai <- True;
 END
 ```
 
-##### Affectation dans la déclaration
+### Affectation dans la déclaration
 
 Vous avez le droit de donner une valeur initiale ou par défaut à une variable lors de sa déclaration
 
 ```pascal
 VAR
-  a := 10: entier;
-  b, c := 3.1415927: réel;
-  titre := 'ma première affectation': chaîne;
-  vrai := true: booléen;
+  a <- 10: entier;
+  b, c <- 3.1415927: réel;
+  titre <- 'ma première affectation': chaîne;
+  vrai <- true: booléen;
 ```
 
 > Note: on ne peut pas affecter de variable à une autre variable lors de sa déclaration.
 
-### Saisie et affichage
+## Saisie et affichage
 
 - ##### pseudo-instruction `Afficher`
   - On utilise la **pseudo-instruction `Afficher`** pour simuler l'affichage
@@ -98,7 +98,7 @@ VAR
   texte: chaîne;
 
 BEGIN
-  texte := 'Bonjour les amis';
+  texte <- 'Bonjour les amis';
   Afficher(texte);
 END
 ```
@@ -118,7 +118,7 @@ BEGIN
 END
 ```
 
-### Les constantes
+## Les constantes
 
 Une constant à une **valeur fixe** (qui ne peut pas changer)
 Une constante **se déclare** généralement avant les variables avec le mot ­clé `CONST`
@@ -126,14 +126,14 @@ Il s’utilise exactement comme une variable, sauf qu’elle **ne peut pas recev
 
 ```pascal
 CONST
- PI := 3.1415927: réel
+ PI <- 3.1415927: réel
 
 VAR
- R := 5: entier
+ R <- 5: entier
  Aire: réel
 
 BEGIN
- Aire := 2*PI*R
+ Aire <- 2*PI*R
  Afficher Aire
 END
 ```
