--- a/_ALGORITHM/Algorithmique - Techniques fondamentales de programmation [Jonifar Lina - ENI]/05. Opérateurs et calculs.md
+++ b/_ALGORITHM/Algorithmique - Techniques fondamentales de programmation [Jonifar Lina - ENI]/05. Opérateurs et calculs.md
@@ -35,7 +35,7 @@
       - ###### L’opérateur `NON` (opérateur de négation)
         - L’expression booléenne est **inversée**, ce qui était vrai devient faux et vice versa
 
-### Le cas des chaînes de caractères
+## Les opérations sur les chaînes de caractères
 
 - On peut utiliser les **opérateurs de comparaison** avec des chaînes de caractères
 - La comparaison s’effectue alors en fonction de l’**ordre alphabétique** des chaînes de caractères.
