--- a/_ALGORITHM/Algorithmique - Techniques fondamentales de programmation [Jonifar Lina - ENI]/06. Types et languages.md
+++ b/_ALGORITHM/Algorithmique - Techniques fondamentales de programmation [Jonifar Lina - ENI]/06. Types et languages.md
@@ -1,9 +1,9 @@
 # Types et langages
 
-### Langages typés ou non
+## Langages typés ou non typés
 
 - ##### langages "non typés"
-  - le type de la variable dépend alors de son **contexte** d’utilisation
+  - le type de la variable dépend de son **contexte** d’utilisation
   - le langage tentant de **convertir** son contenu quand c’est possible
 - ##### langages de "typage fort"
   - toutes les variables doivent être déclarées de manière extrêmement précise:
