--- a/_ALGORITHM/Algorithmique - Techniques fondamentales de programmation [Jonifar Lina - ENI]/07. Les tests et conditions.md
+++ b/_ALGORITHM/Algorithmique - Techniques fondamentales de programmation [Jonifar Lina - ENI]/07. Les tests et conditions.md
@@ -8,11 +8,11 @@
   - une **seconde valeur**: variable ou scalaire
 - Les **opérateurs de comparaison** sont : `<`, `<=`, `>`, `>=`
 
-### L´instruction de test `Si`
+## L´instruction de test `Si`
 
 L´instruction de test `Si` prend deux formes : une **simple** et une **complexe**
 
-##### Forme simple
+### Forme simple
 
 ```pascal
 if booléen then
@@ -22,7 +22,7 @@ end
 
 > Si la condition est vraie, le bloc d’instructions situé après le `alors` est exécuté
 
-##### Forme complexe
+### Forme complexe
 
 ```pascal
 if booléen then
@@ -34,12 +34,12 @@ end
 
 > Si la condition est fausse, le bloc d’instructions situé après le `sinon` qui est exécuté
 
-### Choix multiples: `Selon que`
+## Choix multiples: `Selon que`
 
 ```pascal
 case mois of :
- 1 : libelle_mois := "janvier"
- 2 : libelle_mois := "février"
+ 1 : libelle_mois <- "janvier"
+ 2 : libelle_mois <- "février"
 end
 ```
 
