--- a/_ALGORITHM/Algorithmique - Techniques fondamentales de programmation [Jonifar Lina - ENI]/08. Les structures itératives.md
+++ b/_ALGORITHM/Algorithmique - Techniques fondamentales de programmation [Jonifar Lina - ENI]/08. Les structures itératives.md
@@ -1,13 +1,13 @@
 # Les structures itératives
 
-### Définition
+## Définition
 
 - Les boucles sont des **structures itératives** (structures répétitives)
 - **Une itération** est une séquence d’instructions **destinée à être exécutée plusieurs fois**
 
-### La boucle `Tant Que`
+## La boucle `Tant Que`
 
-##### Structure générale
+### Structure générale
 
 La boucle `Tant Que` permet la répétition d’un bloc d’instructions tant que la condition testée est vraie
 
@@ -17,16 +17,16 @@ while booléen do
 end
 ```
 
-##### Boucles infinies et "break"
+### Boucles infinies et "break"
 
 - Faites toujours bien attention à ce que votre boucle dispose d’une **condition de sortie**
 - En effet rien ne vous empêche de faire des **boucles infinies**
   > Certain langages offrent des instructions permettant de sortir d'une boucle: `break`, `continue`
   > Il est **très déconseillé** de les utilisés, mais plutôt trouver une expression booléenne permettant de les éviter
 
-### La boucle `Répéter … Jusqu’à`
+## La boucle `Répéter … Jusqu’à`
 
-##### Différences fondamentales
+### Différences fondamentales
 
 ```pascal
 repeat
@@ -37,16 +37,16 @@ until booléen;
 - Le `Répéter` ressemble fortement au `Tant Que` avec cependant **deux importantes différences**:
 
   1. Quoi qu’il arrive, il y aura toujours **au moins un passage** dans la boucle
-  2. L’expression booléenne finale est inversée. Un `tant que a !=1` devient un `jusqu’à a=1`
+  2. L’expression booléenne finale est inversée. Un `tant que !=1` devient un `jusqu’à a=1`
 
-### La boucle `Pour`
+## La boucle `Pour`
 
 - Le `Pour` est une boucle à l’usage quasi-exclusif des **compteurs**
 - À chaque passage dans la boucle, **un compteur est incrémenté ou décrémenté**, selon le cas
   > On dit qu’il s’agit d’une **structure incrémentale**
 
 ```pascal
-for compteur:=1 to 10 do
+for compteur<-1 to 10 do
   Bloc d’instructions
 end
 ```
@@ -54,7 +54,7 @@ end
 > Il n’existe aucun cas où la structure `Pour` est strictement nécessaire
 > Elle ne fait que **simplifier** les autres structures itératives avec **l’utilisation de compteurs**
 
-### Quelle structure choisir
+## Quelle structure choisir
 
 - On utilisse **la structure `Pour`**:
   - lorsqu’on connaît **à l’avance** le nombre d’itérations nécessaires au traitement
@@ -62,14 +62,14 @@ end
 - On emploie les **structures `Tant Que` ou `Répéter`**:
   - lorsqu’on **ne connaît pas** forcément à l’avance le nombre d’itérations qui seront nécessaires à l’obtention du résultat souhaité
 
-### Un piège à éviter
+## Un piège à éviter
 
 - Il faut éviter les **boucles infinies**
 - **Ne modifiez jamais un compteur** de boucle `Pour` au sein de celle­ci
   ```pascal
-  for x := 1 to 31 do
+  for x <- 1 to 31 do
     écrire(x)
-    x := x * 2
+    x <- x * 2
   end
   ```
 
