--- a/_ALGORITHM/Algorithmique - Techniques fondamentales de programmation [Jonifar Lina - ENI]/10. Algorithmes avancés.md
+++ b/_ALGORITHM/Algorithmique - Techniques fondamentales de programmation [Jonifar Lina - ENI]/10. Algorithmes avancés.md
@@ -1,8 +1,8 @@
 # Algorithmes avancés
 
-### Les algorithmes des tris
+## Les algorithmes des tris
 
-##### Le tri par création
+### Le tri par création
 
 - Cette méthode semble simple, elle est en fait **lourde et compliquée**
 - Le principe est de créer **un deuxième tableau** ...
@@ -14,7 +14,7 @@
 
 > Pour toutes ces raisons **le tri par création ne doit absolument pas être utilisé**
 
-##### Le tri par sélection
+### Le tri par sélection
 
 Le tri par sélection est très simple :
 
@@ -26,24 +26,24 @@ VAR
     temp,i,j,min,cpt: entiers
     t:array[1..5] d’entiers
 BEGIN
-    Cpt:=5 // taille du tableau
-    for i:=1 to cpt-1 do // itère de 1 à 4
-        min:=i // min = 1
-        for j:=i+1 to cpt do // itère de 2 à 5
+    Cpt<-5 // taille du tableau
+    for i<-1 to cpt-1 do // itère de 1 à 4
+        min<-i // min = 1
+        for j<-i+1 to cpt do // itère de 2 à 5
             if t[j]<t[min] then // si t[2]<t[1]
-                min:=j // min contiendra la position de la valeur la plus petite
+                min<-j // min contiendra la position de la valeur la plus petite
             end
         end
         if min<>j then // si mal placé, on permute leur position
-            temp:=t[min]
-            t[min]:=t[i]
-            t[i]:=temp
+            temp<-t[min]
+            t[min]<-t[i]
+            t[i]<-temp
         end
     end
 END
 ```
 
-##### Le tri à bulles
+### Le tri à bulles
 
 - Le but est que par **permutations successives** des valeurs voisines, ...
 
@@ -57,24 +57,24 @@ VAR
     temp,cpt,i:entiers
     t:array[1..5] d’entiers
 BEGIN
-    cpt:=5 // taille du tableau
-    permut:=vrai
+    cpt<-5 // taille du tableau
+    permut<-vrai
     while permut do
-        permut:=faux // serra maintenu à faux, seulement après que tout les éléments seront placé
-        for i:=1 to cpt-1 do // itère de 1 à 4
+        permut<-faux // serra maintenu à faux, seulement après que tout les éléments seront placé
+        for i<-1 to cpt-1 do // itère de 1 à 4
             if t[i]>t[i+1] then // si précedent plus grand, on permute
-                temp:=t[i]
-                t[i]:=t[i+1]
-                t[i+1]:=temp
-                permut:=vrai
+                temp<-t[i]
+                t[i]<-t[i+1]
+                t[i+1]<-temp
+                permut<-vrai
             end
         end
-        cpt:= cpt-1 // optimisation: on réduit le compteur de 1 (element déja placé)
+        cpt<- cpt-1 // optimisation: on réduit le compteur de 1 (element déja placé)
     end
 END
 ```
 
-##### Le tri par insertion
+### Le tri par insertion
 
 - Le tri par insertion consiste à **insérer directement l´élement** à la bonne position dans la partie du tableau déjà triée
 - On procède en **trois étapes**:
@@ -89,16 +89,16 @@ VAR
     i,mem,pos,cpt: entiers
     t:array[1..5] d’entiers
 BEGIN
-    cpt:=5 // taille du tableau
-    for i:=1 to cpt do // itère de 1 à 5
-        mem:=t[i] // on memorise la valeur à l'indice actuel
-        pos:=i-1 // indice precédent
+    cpt<-5 // taille du tableau
+    for i<-1 to cpt do // itère de 1 à 5
+        mem<-t[i] // on memorise la valeur à l'indice actuel
+        pos<-i-1 // indice precédent
         // tant que la valeur precedente est plus grand que la valeur à l´indice actuel, on permute
         while pos>=0 and t[pos]>mem do
-            t[pos+1]:=t[pos]
-            pos:=pos-1
+            t[pos+1]<-t[pos]
+            pos<-pos-1
         end
-        t[pos+1]:=mem
+        t[pos+1]<-mem
     end
 END
 ```
@@ -106,7 +106,7 @@ END
 > Chaque valeur sera comparer avec toute les valeurs qui la precéde ...
 > Dès, qu´il trouve un valeur plus grand, il permute avec elle, et s'arrete là
 
-### Recherche par dichotomie
+## Recherche par dichotomie
 
 - La recherche par dichotomie ne s’applique que sur les **tableaux déjà triés**
 - La dichotomie consiste à **diviser par deux** l’intervalle de recherche tant que l’élément recherché n’est pas trouvé
@@ -116,17 +116,17 @@ VAR
     tab:tableau[1..10] d’entiers
     début,milieu,fin,recherche:entiers
 BEGIN
-    recherche:=18 // valeur rechercher
-    début:=1
-    fin:=10
+    recherche<-18 // valeur rechercher
+    début<-1
+    fin<-10
 
     repeat // répéter tant que la valeur rechercher n´est pas trouver
-        milieu:=(d+f) DIV 2 // la division DIV retourne un entier
+        milieu<-(d+f) DIV 2 // la division DIV retourne un entier
         // si la valeur rechercher est plus grand que la valeur au milieu du tableau
         if recherche>tab[milieu] then
-            début:=milieu+1 // on déplace début á la deuxième moitié
+            début<-milieu+1 // on déplace début á la deuxième moitié
         else
-            fin:=milieu-1 // sinon on déplace fin á la première moitié
+            fin<-milieu-1 // sinon on déplace fin á la première moitié
         end
     until début<=fin ET recherche<>tab[milieu]
 
