--- a/_ALGORITHM/Algorithmique - Techniques fondamentales de programmation [Jonifar Lina - ENI]/11. Structures et enregistrements.md
+++ b/_ALGORITHM/Algorithmique - Techniques fondamentales de programmation [Jonifar Lina - ENI]/11. Structures et enregistrements.md
@@ -1,14 +1,14 @@
 # Structures et enregistrements
 
-### Principe
+## Principe
 
 - **Les structures** (ou types structurés) permettent de combiner des **éléments de type différents**
 - Les **variables** de types structuré sont appelé **des enregistrements**
 - Les différents **éléments** contenus dans un type structuré sont appelés **des champs**
 
-### Déclaration
+## Déclaration d´une structure
 
-##### Type structuré
+### Type structuré
 
 - Un type structuré **peut contenir** des éléments de types **primitif**, **mais aussi** des éléments **d’autres types structurés**
 - Un type structuré doit être **déclaré** et défini **avant les variables**, donc entre les constantes et les variables
@@ -37,7 +37,7 @@ TYPE
     FinStruct
 ```
 
-##### Enregistrement
+### Les Enregistrements
 
 - Un enregistrement **est une "variable"** d’un type structuré donné
 - Il **se déclare** exactement **comme une variable**, au même endroit, sous le mot-­clé `VAR`
@@ -49,7 +49,7 @@ VAR
 
 > En mémoire, les éléments d’un enregistrement sont contiguës (à la suite les une des autres)
 
-### Utiliser les enregistrements
+## Utiliser les enregistrements
 
 Les enregistrements sont **composés de** plusieurs éléments appelés **champs**
 Quand vous **manipulez un enregistrement**, vous le faites **au travers de ses champs** :
@@ -59,7 +59,7 @@ Quand vous **manipulez un enregistrement**, vous le faites **au travers de ses c
 - Cependant, il est possible d’affecter un enregistrement à un autre du même type :
   - chaque champ de l’enregistrement affecté reçoit la valeur du champ correspondant
 
-##### Utiliser les champs
+### Utiliser les champs d´un enregistrement
 
 On accede aux champs d´un enregistrement en utilisant `.` (un point)
 
@@ -93,7 +93,7 @@ END
 > Le seul cas où un enregistrement peut recevoir une valeur en globalité ...
 > c’est quand on lui affecte un autre enregistrement du même type
 
-##### Un enregistrement dans une structure
+### Un enregistrement dans une structure
 
 - Un enregistrement peut faire lui-­même partie d’un autre type structuré
 
@@ -114,10 +114,10 @@ TYPE
 VAR
     art:article
 BEGIN
-    art.fab.adresse:='12 rue Siflette 13248 Latruelle'
+    art.fab.adresse<-'12 rue Siflette 13248 Latruelle'
 ```
 
-##### Un tableau dans une structure
+### Un tableau dans une structure
 
 ```pascal
 TYPE
@@ -131,9 +131,9 @@ BEGIN
     bart1.vente[indice]
 ```
 
-### Les tableaux d’enregistrements
+## Les tableaux d’enregistrements
 
-##### Les tables
+### Les tables
 
 Un tableau d’enregistrements **permet de déclarer `n` enregistrements** indépendants
 Il **se déclare** comme n’importe quel autre tableau, aussi appelé **table**
@@ -152,7 +152,7 @@ VAR
 **Pour saisir** les éléments d´un enregistrement de cette table, **vous utilisez les indices**:
 
 ```pascal
-articles[1].ref:='art001_01'
+articles[1].ref<-'art001_01'
 ```
 
 ---
