--- a/_ALGORITHM/Algorithmique - Techniques fondamentales de programmation [Jonifar Lina - ENI]/12. Procédures et fonctions.md
+++ b/_ALGORITHM/Algorithmique - Techniques fondamentales de programmation [Jonifar Lina - ENI]/12. Procédures et fonctions.md
@@ -1,6 +1,6 @@
 # Procédures et fonctions
 
-### Principe
+## Principe
 
 - **Une application** est composée de plusieurs parties fonctionnelles:
   - Le **programme principal** (bloc principal)
@@ -10,9 +10,7 @@
 > **Un sous-­programme** ne se lance jamais tout seul, il **doit être appelé** ...
 > depuis le programme principal. ou un autre sous-programme
 
-### Déclaration et définition
-
-##### Dans un algorithme
+## Déclaration d'un sous-­programmes
 
 Les sous-­programmes sont déclarés et entièrement écrits au tout début, avant le mot-­clé `PROGRAMME`
 
@@ -44,9 +42,9 @@ On constate que **un sous-programme est constitué de**:
 - Un **bloc d’instructions** encadré entre `Début` et `Fin`
 - Le tout entre les mots­-clés `Procédure` et `FinProc`
 
-> En algorithmique, un sous­-programme ne peut pas être déclaré dans un autre sous­programme
+> En algorithmique, un sous­-programme ne peut pas être déclaré dans un autre sous-­programme
 
-### Appel
+## Appel d'un sous-­programmes
 
 - L’appel au sous­-programme est **une instruction** qui va déclencher l’exécution de celui-­ci
 - Les sous-­programmes peuvent être appelés avec l´instruction `Appeler`
@@ -61,21 +59,21 @@ Un sous- ­programme peut être appelé en lui fournissant des valeurs, appelée
 Appeler RepeteCar(nbr)
 ```
 
-### Fonctions et procédures
+## Fonctions et procédures
 
 Il y a deux types de sous­programmes: `Procédure`, et `Fonction`
 
 > Vous entendrez parfois parler de langages **procéduraux** (comme le Pascal) ou **fonctionnels** (comme le C)
 
-##### Les procédures
+### Les procédures
 
-Les procédures sont des sous­programmes qui ne retourne pas de résultat (de valeur)
+Les procédures sont des sous-­programmes qui ne retourne pas de résultat (de valeur)
 
 > Soit les procédures sont des fonctions qui ne retourne pas de résultat
 
-##### Les fonctions
+### Les fonctions
 
-Une fonction est un sous­programme qui retourne une valeur
+Une fonction est un sous-­programme qui retourne une valeur
 
 ```pascal
 Fonction nom():typeRetourné
@@ -102,16 +100,16 @@ Comme une fonction retourne une valeur, elle peut être appelée partout où une
 
 > Par contre on ne peut pas affecter une valeur á une fonction: `maFonction<-x // INTERDIT`
 
-### Variables locales et globales
+## Variables locales et globales
 
 **Selon l´endroit** où les variables sont déclarées, les variables ont une "portée" différente
 
-##### Variable Locale
+### Variable Locale
 
 - Si une variable est déclaré dans un bloc d’instructions, elle a une **portée locale au bloc**
 - Elle n’est **visible et accessible que dans le bloc** d’instructions où elle a été déclarée
 
-##### Variable Globale
+### Variable Globale
 
 - Une variable globale est déclarée en dehors et avant les sous-­programmes et le programme principal
 - Étant globale, elle est **accessible de partout**, tant en accès qu’en modification
@@ -135,13 +133,13 @@ BEGIN
 END
 ```
 
-### Les paramètres
+## Les paramètres d'un sous-programme
 
 - Les paramètres permettent de **transmettre des valeurs** à vos procédures et fonctions
 - Il est cependant possible de passer comme paramètre **toute expression retournant une valeur**
   > On peut très bien passer un enregistrement comme paramètre
 
-##### Procédures
+### Les paramètres d'une Procédures
 
 La syntaxe de passage des paramètres est la suivante :
 
@@ -161,7 +159,7 @@ Quand vous avez **plusieurs paramètres en entrée (ou sortie)**, il suffit de t
 procedure proc(E p1,p2,p3:entiers,p4,p5:chaînes)
 ```
 
-##### Les fonctions
+### Les paramètres d'un fonctions
 
 Les fonctions ne retournent qu’une seule valeur via l’instruction `Retourne`.
 Aussi il n’y a pas besoin de spécifier si les paramètres sont en entrée ou en sortie. **Ils sont forcément en entrée**
