--- a/_ALGORITHM/Algorithmique - Techniques fondamentales de programmation [Jonifar Lina - ENI]/13. Les sous-programmes récursifs.md
+++ b/_ALGORITHM/Algorithmique - Techniques fondamentales de programmation [Jonifar Lina - ENI]/13. Les sous-programmes récursifs.md
@@ -1,6 +1,6 @@
 # Les sous-programmes récursifs
 
-### Principe
+## Principe d'un sous-programmes récursifs
 
 - Un sous-­programme peut appeler un autre sous-­programme, quel qu’il soit
   - Donc un **sous- ­programme peut s’appeler lui-­même**
@@ -45,7 +45,7 @@ Procédure recur2()
 FinProc
 ```
 
-### Exemple : la factorielle
+## Exemple : la factorielle
 
 ```pascal
 Fonction fact(n:entier) :entier
