--- a/_ALGORITHM/Algorithmique - Techniques fondamentales de programmation [Jonifar Lina - ENI]/14. Les différents fichiers.md
+++ b/_ALGORITHM/Algorithmique - Techniques fondamentales de programmation [Jonifar Lina - ENI]/14. Les différents fichiers.md
@@ -2,20 +2,20 @@
 
 Un fichier permet de conserver les donnés de facon **persistante**, la mémoire étant **volatile**
 
-### Les formats
+## Les formats
 
 - Tout ce qui peut être **formalisé** peut être stocké dans un fichier.
 - Le **format** d´un fichier caractèrise la structure des données quel contient
 
 **Deux catégories** de fichiers sont distinguables :
 
-##### Les fichiers texte
+### Les fichiers texte
 
 Organisés sous forme de lignes de texte successives
 
-##### Les fichiers binaires (fichiers bruts)
+### Les fichiers binaires (fichiers bruts)
 
-Contiennent des données variées dont des nombres représentés sous forme binaire, ne correspondant peu ou pas du tout à du texte, qui s’appellent des fichiers binaires
+Contiennent des données variées dont des nombres représentés sous forme binaire
 
 > Les données d’un fichier binaire y sont écrites exactement **comme si elles sortaient de la mémoire**
 
