--- a/_ALGORITHM/Algorithmique - Techniques fondamentales de programmation [Jonifar Lina - ENI]/15. Les enregistrements des fichiers.md
+++ b/_ALGORITHM/Algorithmique - Techniques fondamentales de programmation [Jonifar Lina - ENI]/15. Les enregistrements des fichiers.md
@@ -1,12 +1,12 @@
-# Les enregistrements
+# Les enregistrements des fichiers
 
 - Dans un fichier texte, vous devez définir la **structure de vos enregistrements**
 - Vous pouvez initialement choisir entre **deux méthodes**:
   - les enregistrements avec **délimiteurs** ou à **largeur fixe**
 
-### Les délimiteurs
+## Les fichiers avec délimiteurs
 
-- Dans enregistrement (chaque ligne), les valeurs individuelles sont appelées des **champs**
+- Dans un enregistrement (chaque ligne), les valeurs individuelles sont appelées des **champs**
 - Ils sont séparées entre elles par un caractère particulier appelé **caractère de délimitation**
 
   > Le délimiteur est souvent le point­virgule (`;`) ou les deux points (`:`) qui sont utilisés
@@ -19,7 +19,7 @@ root:x:0:0:root:/root:/bin/bash
 daemon:x:2:2:Daemon:/sbin:/bin/bash
 ```
 
-### Largeur fixe
+## Les fichiers à largeur fixe
 
 Chaque champ a une longueur prédéfinie et occupe toute cette longueur, quitte à être complété par des espaces
 
@@ -29,13 +29,13 @@ rohaut   x123   123   Compte Seb      /home/seb /bin/ksh
 ```
 
 - Contrairement au format délimité, le format à largeur fixe consomme bien **plus de mémoire**
-- Cependant, **la récupération** de tels enregistrements **est bien plus simple** ...
+- Cependant, **la récupération** de tels enregistrements **est bien plus rapide** ...
   - car vous connaissez à l’avance la taille de chaque champ ...
   - donc toutes les positions vos enregistrements
 
-### Principes d’accès
+## Principes d’accès
 
-##### Étapes de base
+### Étapes de base
 
 Pour travailler avec des fichiers, il vous faudra :
 
@@ -43,7 +43,7 @@ Pour travailler avec des fichiers, il vous faudra :
 - **Traiter** le contenu du fichier : toutes les opérations souhaitées pour accéder et **manipuler son contenu**
 - **Fermer** le fichier, quand tous les traitements sont terminés.
 
-##### Identificateurs de fichiers et canaux
+### Identificateurs de fichiers et canaux
 
 - L’accès à un fichier passe par l’utilisation d’un **canal**
 - Un canal permet de faire transiter un flux d’information (les données)
@@ -59,7 +59,7 @@ Pour travailler avec des fichiers, il vous faudra :
 - L’ouverture d’un fichier consiste donc, directement ou indirectement, à rattacher un canal à un fichier
 - Les données que vous écrirez dans le fichier iront de votre programme vers le fichier par ce canal
 
-##### Les modes d’ouverture
+### Les modes d’ouverture
 
 En ouvrant un fichier, il faut indiquer comment vous souhaitez y accéder:
 
