--- a/_ALGORITHM/Algorithmique - Techniques fondamentales de programmation [Jonifar Lina - ENI]/16. Fichier texte séquentiel.md
+++ b/_ALGORITHM/Algorithmique - Techniques fondamentales de programmation [Jonifar Lina - ENI]/16. Fichier texte séquentiel.md
@@ -1,8 +1,8 @@
 # Fichier texte séquentiel
 
-### Ouvrir et fermer un fichier
+## Ouvrir et fermer un fichier
 
-##### Ouvrir et fermer un fichier
+### Ouvrir et fermer un fichier
 
 1. Vous déclarer **le nom** de la variable à associée au fichier et le **type d’accès** (séquentiel, direct, indexé, etc.)
 
@@ -25,9 +25,9 @@
    Fermer fic
    ```
 
-### Lire et écrire des enregistrements
+## Lire et écrire des enregistrements
 
-##### Lecture
+### Lecture d'un enregistrement d'un fichier
 
 - Pour simple rappel, **les enregistrements sont les lignes** d’un fichier texte
 - La **lecture** d’une ligne se fait via l’instruction `Lire`
@@ -60,7 +60,7 @@ Vous avez deux possibilités :
 - La fonction `FinFichier(nom_logique)` retourne un booléen ...
   - qui indique si la fin du fichier a été atteinte ou non
 
-##### Écriture
+### Écriture d'un enregistrement de fichiers
 
 - La fonction `Ecrire` prend comme paramètre **le nom** logique **et l’enregistrement** (la ligne) à écrire
 
@@ -75,7 +75,7 @@ Vous avez deux possibilités :
 - L’instruction `Ecrire` rajoute l’enregistrement dans le fichier, ...
   - puis se place à la suite de l’enregistrement créé
 
-### Les enregistrements structurés
+## Les enregistrements de fichiers structurés
 
 - Quand vous récupérez un enregistrement, vous le récupérez en entier et c’est à vous de le découper ensuite
 - Vous pouvez utiliser pour cela des enregistrements de types structurés, ...
