--- a/_ALGORITHM/Algorithmique - Techniques fondamentales de programmation [Jonifar Lina - ENI]/17. Les pointeurs et références.md
+++ b/_ALGORITHM/Algorithmique - Techniques fondamentales de programmation [Jonifar Lina - ENI]/17. Les pointeurs et références.md
@@ -1,8 +1,8 @@
 # Les pointeurs et références
 
-### Rappels sur la mémoire et les données
+## Rappels sur la mémoire et les données
 
-##### Structure de la mémoire
+### Structure de la mémoire
 
 - **La mémoire** est **découpée en octets**
 - **Chaque octet** de la mémoire **dispose d’une adresse**
@@ -15,19 +15,19 @@
 
 **La zone de la mémoire** contenant la donnée **est définie par deux choses**:
 
-- **L’adresse de début** de la donnée, c’est­à­dire l’adresse du premier octet contenant la donnée
+- **L’adresse de début** de la donnée, c’est-­à-­dire l’adresse du premier octet contenant la donnée
 - **La taille de cette zone**, c’est-­à-­dire le nombre d’octets sur lequel s’étalent les données
   > **La taille** de la zone **dépend du type** de la donnée.
   > Un caractère ASCII n’occupe qu’un seul octet, un entier quatre, etc.
 
 La variable contient l’adresse de la zone mémoire à laquelle elle est attribuée.
 
-###### Java et la gestion de la mémoire
+#### Java et la gestion de la mémoire
 
 - Le langage Java ne permet pas de connaître l’adresse de la variable
 - En Java, la mémoire est allouée dynamiquement par la machine virtuelle
 
-###### Brefs exemples en C
+#### Brefs exemples en C
 
 - En C vous pouvez afficher l’adresse d’une variable très simplement
 - Il suffit en C de rajouter le signe `&` avant le nom de la variable
@@ -37,20 +37,21 @@ long i=123456;
 printf("%d à l’adresse %#xd\n",i,&i); // 123456 à l’adresse 0xbf9f8420d
 ```
 
-### Le pointeur
+## Le pointeur
 
-##### Principe et définition
+### Principe et définition
 
 Un pointeur est une **variable qui contient l’adresse** d’une autre variable (dite **variable pointée**)
 
-> Si vous affichez le contenu d’un pointeur, vous obtenez une adresse qui est celle de la variable pointée. Tandis que si vous affichez le contenu de la variable pointée, vous obtenez la valeur associée à cette dernière
+> Si vous affichez le contenu d’un pointeur, vous obtenez une adresse qui est celle de la variable pointée.
+> Tandis que si vous affichez le contenu de la variable pointée, vous obtenez la valeur associée à cette dernière
 
 - Un pointeur est une variable. De ce fait, elle doit être déclarée
   > elle dispose elle-­même de sa propre adresse en mémoire, et se voit définir un type
 - Le type d’un pointeur ne décrit pas ce qu’il contient mais le type de la variable qu’il pointe
   > c’est une adresse, donc en principe d’une longueur de 32 ou 64 bits selon les architectures
 
-##### Exemple en C
+### Exemple d'un pointeur en C
 
 ```c
 long i=123456; /* Un entier long contenant 123456 */
@@ -73,7 +74,7 @@ printf("Contenu de la variable pointée via *p_i: %d\n",*p_i);
 // -> Contenu de la variable pointée via *p_i: 123456
 ```
 
-##### Applications
+### Applications des pointeurs
 
 Les applications sont nombreuses:
 
@@ -85,9 +86,9 @@ Les applications sont nombreuses:
 - En C, les tableaux se manipulent très facilement via des pointeurs
   - puisqu’il est possible de faire des calculs sur les adresses
 
-### Notation algorithmique
+## Notation algorithmique
 
-##### Déclarer et utiliser les pointeurs
+### Déclarer et utiliser les pointeurs
 
 - L’algorithmique autorise bien entendu l’utilisation des pointeurs
 - Vous déclarez un pointeur comme n’importe quelle variable sous le mot-­clé `VAR`
@@ -107,30 +108,30 @@ VAR
     Cpt: entier
     pCpt: pointeur sur entier
 BEGIN
-    Txt:="Hello World"
-    pTxt:=adresse de Txt
-    Cpt:=10
-    pCpt:=adresse de cpt
+    Txt<-"Hello World"
+    pTxt<-adresse de Txt
+    Cpt<-10
+    pCpt<-adresse de cpt
 
     Afficher *ptxt // -> Hello World
-    *ptxt:="Salut tout le monde"
+    *ptxt<-"Salut tout le monde"
     Afficher txt // -> Salut tout le monde
-    *pInt:=20
-    cpt:=cpt+1
+    *pInt<-20
+    cpt<-cpt+1
     Afficher cpt // -> 21
 END
 ```
 
-> Tout comme en C, vous utiliserez l’étoile pour accéder au contenu de la variable pointée, ...
+> Tout comme en C, vous utiliserez l’étoile `*` pour accéder au contenu de la variable pointée, ...
 > tant en lecture qu’en affectation
 
-##### Allocation dynamique
+### Allocation dynamique
 
 - Il est possible de réserver un emplacement mémoire pour une donnée pointée directement
 - Vous créez un pointeur sur un entier par exemple, et réserver un espace mémoire qui contiendra cet entier
 
 ```pascal
-pointeur:=nouveau type
+pointeur<-nouveau type
 ```
 
 > Après cette instruction, le pointeur reçoit l’adresse mémoire de la zone réservée
@@ -143,9 +144,9 @@ Libérer pointeur
 
 > Attention! Si vous avez conservé l’adresse de cette zone dans un autre pointeur et que vous l’avez désallouée, ce pointeur pointe sur une zone éventuellement réaffectée à autre chose. Le mieux est de replacer une valeur `NIL` après la libération
 
-### Java et les références
+## Java et les références
 
-##### Différences entre le C et Java
+### Différences entre le C et Java
 
 Du fait de la machine virtuelle, Java ne connaît pas les pointeurs au sens propre
 Similairement, il utilise **des références** pour un type particulier: **les objects**
@@ -158,16 +159,16 @@ Similairement, il utilise **des références** pour un type particulier: **les o
 
 > L’absence des pointeurs en Java n´est pas une limitation. Il nous débarrasse de toute la complexité de la gestion d'addresses.
 
-##### Les références sur les objets
+### Les références sur les objets
 
 En Java, toute variable dont le contenu est déclaré avec l’instruction "new" est une référence sur le type de variable associé
 
-##### Références sur structures
+### Références sur structures
 
 - Dans Java toutes les soit-­disant structures sont en fait des objets
 - Et la variable qui reçoit un objet en reçoit une référence
 
-##### Le piège en Java
+### Le piège en Java
 
 En Java, **les paramètres sont toujours passés par valeur**, et non pas par référence, **même lorsqu'il s'agit d'objects**
 
@@ -203,7 +204,7 @@ static void modif(element p1,element p2) {
 
 Cette fois, **c’est le contenu des valeurs dans la zone mémoire référencée qui est affecté**, et vous obtenez le résultat attendu
 
-##### La valeur null
+### La valeur null
 
 - Vous pouvez **initialiser un object avec la valeur `null`**, au lieu de créer une référence avec `new`
 - La valeur `null` signifie que la variable a été déclarée mais **n’a pas d’objet instancié**
