--- a/_ALGORITHM/Algorithmique - Techniques fondamentales de programmation [Jonifar Lina - ENI]/18. Les listes chaînées.md
+++ b/_ALGORITHM/Algorithmique - Techniques fondamentales de programmation [Jonifar Lina - ENI]/18. Les listes chaînées.md
@@ -1,14 +1,14 @@
 # Les listes chaînées
 
-### Listes chaînées
+## Listes chaînées
 
 **Une liste chaînée** est dite **unilatère** : l’accès aux éléments composant la liste est **séquentiel**
 
 > Vous devez lire les n éléments précédents pour accéder à celui voulu.
 
-##### Principe
+### Principe d'une liste chaìnée
 
-###### Les tableaux
+#### Les tableaux
 
 L’utilisation des tableaux pose parfois des problèmes un peu complexes:
 
@@ -16,7 +16,7 @@ L’utilisation des tableaux pose parfois des problèmes un peu complexes:
 - Insérer un élément au milieu du tableau
 - Supprimez un enregistrement
 
-###### Les enregistrements
+#### Les enregistrements
 
 - Un enregistrement peut contenir un autre enregistrement de même type
 - L’enregistrement peut aussi contenir un pointeur vers un autre enregistrement de même type
@@ -33,13 +33,13 @@ Les enregistrements sont donc chaînés les uns aux autres, c’est une **liste 
 TYPE
     Structure element
         valeur:entier
-        pSuiv:=NIL:pointeur sur element
+        pSuiv<-NIL:pointeur sur element
     FinStruct
 ```
 
 > Le premier élément des la liste est le point d'entrée, conserver toujours son adresse
 
-##### Création
+### Création d'une liste chaìnée
 
 - Pour créer une liste, il faut commencer par son premier élément
 - Le premier élément est un pointeur auquel vous allez allouer dynamiquement une zone mémoire
@@ -64,7 +64,7 @@ Fonction cree_liste():pointeur sur element
 FinFonc
 ```
 
-> `pTete→pSuiv <- NIL` se lit ainsi : `(*pTete).pSuiv<-NIL`, ...
+> `pTete->pSuiv <- NIL` se lit ainsi : `(*pTete).pSuiv<-NIL`, ...
 > c’est-­à-­dire, le champ `pSuiv` de l’enregistrement **pointé par `pTete`** reçoit la valeur `NIL`
 
 Pour exploiter cette fonction, il suffit de déclarer un pointeur, et lui affecter le résultat de celle-­ci :
