--- a/_ALGORITHM/Algorithmique - Techniques fondamentales de programmation [Jonifar Lina - ENI]/19. Les arbres.md
+++ b/_ALGORITHM/Algorithmique - Techniques fondamentales de programmation [Jonifar Lina - ENI]/19. Les arbres.md
@@ -1,26 +1,26 @@
 # Les arbres
 
-### Principe
+## Principe
 
 - Après les tableaux et les listes, vous pouvez vous aussi choisir de représenter l’organisation de vos données sous **forme d’arborescence** en programmation
 
 - Tout ce qui peut incorporer une **notion de hiérarchie** peut être représenté sous forme d’une arborescence
 
-### Définitions
+## Définitions d'un arbres
 
-##### Base
+### Base
 
 - Un arbre est formé d’une **racine** qui est l’élément à la base de l’arbre,
 - et d’un nombre fini d’arbres qui lui sont raccordés appelés **sous-­arbres**
 - Chaque élément d’un arbre peut avoir **plusieurs successeurs mais un seul prédécesseur**
   > Seule la racine n’a pas de prédécesseur
 
-### Terminologie
+## Terminologie
 
 - Un **noeud** est un élément quelconque de l’arbre
 - La **racine** est le premier élément de l’arbre
 - Une **feuille** est un élément qui n’a pas de successeur
-- Un **noeud interne** qui a donc un prédécesseur et des successeurs
+- Un **noeud interne** qui a un prédécesseur et des successeurs
 - Un **arc** relie deux noeuds
 - Une **branche** est le chemin qui relie la racine à une feuille
 - Le **père** est le prédécesseur unique d’un noeud
@@ -28,21 +28,21 @@
 - Les noeuds de père identique sont des **frères**
 - Le noeud le plus à gauche de l’arbre est **l’aîné**
 
-##### Description horizontale
+### Description horizontale
 
 Un **niveau** est l’ensemble des noeuds à égale distance de la racine
 Un arbre est strictement **complet** si tous les niveaux sont complets
 
-##### Description verticale
+### Description verticale
 
 La **hauteur d’un arbre** est le nombre de noeuds du plus long chemin direct
 
-##### L’arbre binaire
+### L’arbre binaire
 
 Un **arbre binaire** est un arbre dont **chaque noeud a au plus deux fils**
 L’arbre binaire est constitué d'un **sous-­arbre droit** et d'un **sous-­arbre gauche**
 
-### Parcours d’un arbre
+## Parcours d’un arbre
 
 ```pascal
 Structure noeud
@@ -54,7 +54,8 @@ FinStruct
 
 - Le parcours complet d’un arbre consiste à parcourir tout l’arbre afin d’accéder l’ensemble des noeuds de l’arbre
 
-- Bien qu’il soit possible de faire ceci avec des structures itératives le moyen le plus facile est d’employer des sous-programmes récursifs afin de traiter
+- Bien qu’il soit possible de faire ceci avec des structures itératives ...
+- le moyen le plus facile est d’employer des sous-programmes récursifs afin de traiter
 
 ---
 
