--- a/_ALGORITHM/Algorithmique - Techniques fondamentales de programmation [Jonifar Lina - ENI]/09. Les tableaux.md
+++ b/_ALGORITHM/Algorithmique - Techniques fondamentales de programmation [Jonifar Lina - ENI]/09. Les tableaux.md
@@ -1,8 +1,8 @@
 # Les tableaux
 
-### Principe et définition
+## Principe et définition d'un tableau
 
-##### Simplifier les variables
+### Simplifier les variables
 
 Jusqu’à présent, les types de données étaient des **scalaires** (sauf pour les chaînes de caractères)
 
@@ -12,12 +12,12 @@ Jusqu’à présent, les types de données étaient des **scalaires** (sauf pour
 - **L'indice** est le numéro qui sert à identifier un élément (une valeur) du tableau
 
 ```pascal
-Note[1]:=15
+Note[1]<-15
 ```
 
 > Un tableau n’est pas un type de données, mais une **liste d’éléments d’un type donné**
 
-##### Les dimensions
+### Les dimensions d'un tableau
 
 Avec les tableaux, on peut rajouter **des indices aux indices**
 
@@ -25,12 +25,12 @@ Avec les tableaux, on peut rajouter **des indices aux indices**
 Note[1][10]←17
 ```
 
-##### Les types
+### Les types d'un tableau
 
 - Un tableau n’est pas un type de données mais un **ensemble de valeurs**
 - En algorithmique, un tableau contient n éléments **de même type**
 
-##### Déclaration
+### Déclaration d'un tableau
 
 En pseudo­code algorithmique, les tableaux se déclarent au même endroit que les variables
 
@@ -42,7 +42,7 @@ VAR
 
 > Le tableau de valeurs [1..10] aura dix éléments, numérotés de 1 à 10
 
-##### Utilisation
+### Utilisation d'un tableau
 
 **Un élément de tableau** reçoit une valeur, se lit et s’écrit **comme une variable**
 Ce sont dans les **structures itératives** que les tableaux prennent toutes leurs significations
@@ -52,14 +52,14 @@ VAR
  notes:array[1..10] de réels
  i:entier
 BEGIN
- for i:=1 to 10 do
+ for i<-1 to 10 do
     Lire note[i]
  end
 END
 
 ```
 
-##### Redimensionner un tableau
+### Redimensionner un tableau
 
 Si vous ne connaissez pas par avance le nombre d’éléments de votre tableau, vous avez deux possibilités:
 
@@ -69,9 +69,9 @@ Si vous ne connaissez pas par avance le nombre d’éléments de votre tableau, 
 > Vous ne pouvez **pas redimensionner** un tableau déjà dimensionné
 > Tout comme il est **impossible de dépasser** le nombre d’éléments déclarés
 
-### Représentation en mémoire
+## Représentation en mémoire d'un tableau
 
-##### Représentation linéaire
+### Représentation linéaire d'un tableau
 
 - Les éléments d’un tableau sont placés dans des cases contiguës en mémoire.
 - Si vous prenez un tableau de cinq nombres, il pourrait être représenté ainsi :
@@ -89,15 +89,15 @@ Si vous ne connaissez pas par avance le nombre d’éléments de votre tableau, 
   | Indice | 1,1 | 1,2 | 1,3 | 2,1 | 2,2 | 2,3 |
   | Valeur | 10  | 7   | 14  | 8   | 12  | 11  |
 
-  > L'ensemble des valeur est transposé en une dimesion
+  > L'ensemble des valeur est transposé en une dimension
   > L'indice contient les coordonnés des dimensions
 
-##### Représentation par référence
+### Représentation par référence d'un tableau
 
 - **Une chaîne est un tableau** à une dimension comportant `n+1` indices
-  - `+1` can le dernier indice contiendra un caractère `nul` (caractère de terminaison)
+  - `+1` car le dernier indice contiendra un caractère `nul` (caractère de terminaison)
 - Quand on assigne une chaîne à une variable, la variable contient **l'adresse du premier charactère**
-- Le programme **utilise ensuite la longeur** de la chaîne pour obtenir la suite des caractères de la chaîne
+- Le programme **utilise ensuite la longueur** de la chaîne pour obtenir la suite des caractères de la chaîne
 
 ```pascal
 VAR
